@@ -27,6 +27,8 @@ Revision history for {{$dist->name}}
         - improve errors when PPI failes to parse (thanks, Nick Tonkin)
         - sort list of executable files in Makefile.PL, for deterministic
           builds (thanks, Karen Etheridge)
+        - omit configure-requires prerequisites from [MakeMaker]'s fallback
+          prerequisites (used by older ExtUtils::MakeMaker)
 
 5.037     2015-06-04 21:46:38-04:00 America/New_York
         - issue a warning when version ranges are passed through to
